deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
spec:
    selector:
        matchLabels: 
            app: postgres
    template: 
        metadata:
            labels:  
                app: postgres
        spec: 
            containers:
            - image: chaowenguo/postgres
              name: postgres
              volumeMounts:
              - name: postgres-persistent-storage
                mountPath: /var/lib/postgresql/data
                subPath: postgres
            volumes:
            - name: postgres-persistent-storage
              persistentVolumeClaim:
                  claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    selector:
        app: postgres
    ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
            - image: redis
              name: redis
---
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector:
        app: redis
    ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zookeeper
spec:
    selector:
        matchLabels:
            app: zookeeper
    template:
        metadata:
            labels:
                app: zookeeper
        spec:
            containers:
            - image: zookeeper
              name: zookeeper
---
apiVersion: v1
kind: Service
metadata:
    name: zookeeper
spec:
    selector:
        app: zookeeper
    ports:
    - port: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka
spec:
    selector:
        matchLabels:
            app: kafka
    template:
        metadata:
            labels:
                app: kafka
        spec:
            containers:
            - image: bitnami/kafka
              name: kafka
---
apiVersion: v1
kind: Service
metadata:
    name: kafka
spec:
    selector:
        app: kafka
    ports:
    - port: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web
spec:
    selector:
        matchLabels:
            app: web
    template:
        metadata:
            labels:
                app: web
        spec:
            containers:
            - image: chaowenguo/aiohttp
              name: web
---
apiVersion: v1
kind: Service
metadata:
    name: web
spec:
    selector:
        app: web
    ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: chat
spec:
    selector:
        matchLabels:
            app: chat
    template:
        metadata:
            labels:
                app: chat
        spec:
            containers:
            - image: chaowenguo/chat:aiohttp
              name: chat
---
apiVersion: v1
kind: Service
metadata:
    name: chat
spec:
    selector:
        app: chat
    ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
            - image: chaowenguo/nginx:aiohttp
              name: chat
---
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    selector:
        app: nginx
    ports:
    - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        dev.okteto.com/generate-host: 'true'
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/enable-cors: 'true'
    rules:
    - http:
          paths:
          - path: /(.*\.(js|html))$
            backend:
                serviceName: nginx
                servicePort: 80
          - path: /web/(.*)
            backend:
                serviceName: web
                servicePort: 8080
          - path: /chat/(.*)
            backend:
                serviceName: chat
                servicePort: 8080
